# BrushStudio_KritaAddon

./: .gitignore  __init__.py  brush_studio.desktop  core_state.py  main_panel.py  preview_service.py  smart_panel.py  ui_delegate.py  ui_grid.py  ui_slot.py
core/: __init__.py  models.py  parser.py  state.py
services/: __init__.py  preview.py
services/Preview/: __init__.py  cache.py  queue.py  renderer.py  service.py
src/: CMakeLists.txt  README_CPP.md  preview_engine.cpp
src/brush_studio/ui/: ui_preview_raw.py
ui/: __init__.py  grid.py  main_panel.py  settings_popup.py  slot.py
